// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IncidentDetailPage /> events should render the print view 1`] = `
<Connect(PrintLayout)
  id="100"
  incident={Object {}}
  onPrintView={[Function]}
  priorityList={
    Array [
      Object {
        "key": "normal",
        "value": "Normaal",
      },
      Object {
        "key": "high",
        "value": "Hoog",
      },
    ]
  }
  stadsdeelList={
    Array [
      Object {
        "key": "A",
        "value": "Centrum",
      },
      Object {
        "key": "B",
        "value": "Westpoort",
      },
      Object {
        "key": "E",
        "value": "West",
      },
      Object {
        "key": "M",
        "value": "Oost",
      },
      Object {
        "key": "N",
        "value": "Noord",
      },
      Object {
        "key": "T",
        "value": "Zuidoost",
      },
      Object {
        "key": "K",
        "value": "Zuid",
      },
      Object {
        "key": "F",
        "value": "Nieuw-West",
      },
    ]
  }
/>
`;

exports[`<IncidentDetailPage /> rendering should render correctly 1`] = `
<div
  className="incident-detail-page row container"
>
  <div
    className="col-12"
  >
    <h3>
      Melding 
      100
    </h3>
  </div>
  <ul
    className="col-12 col-md-4 incident-detail-page__map"
  />
  <div
    className="col-12 col-md-8"
  >
    (
    <Link
      replace={false}
      to="undefined/incidents"
    >
      Terug naar overzicht
    </Link>
    )
    <button
      onClick={[Function]}
    >
      Print view
    </button>
    <IncidentDetail
      incident={Object {}}
      priorityList={
        Array [
          Object {
            "key": "normal",
            "value": "Normaal",
          },
          Object {
            "key": "high",
            "value": "Hoog",
          },
        ]
      }
      stadsdeelList={
        Array [
          Object {
            "key": "A",
            "value": "Centrum",
          },
          Object {
            "key": "B",
            "value": "Westpoort",
          },
          Object {
            "key": "E",
            "value": "West",
          },
          Object {
            "key": "M",
            "value": "Oost",
          },
          Object {
            "key": "N",
            "value": "Noord",
          },
          Object {
            "key": "T",
            "value": "Zuidoost",
          },
          Object {
            "key": "K",
            "value": "Zuid",
          },
          Object {
            "key": "F",
            "value": "Nieuw-West",
          },
        ]
      }
    />
  </div>
  <div
    className="col-12"
  >
    <Tabs
      onTabChanged={[Function]}
      selectedTab="status"
      tabs={
        Object {
          "category": Object {
            "name": "Subcategorie",
            "value": <withReducer(withSaga(Connect(IncidentCategoryContainer)))
              id="100"
            />,
          },
          "history": Object {
            "name": "Historie",
            "value": <withReducer(withSaga(Connect(IncidentHistoryContainer)))
              id="100"
            />,
          },
          "image": undefined,
          "notes": Object {
            "count": undefined,
            "name": "Notities",
            "value": <withReducer(withSaga(Connect(IncidentNotesContainer)))
              id="100"
            />,
          },
          "priority": Object {
            "name": "Urgentie",
            "value": <withReducer(withSaga(Connect(IncidentPriorityContainer)))
              id="100"
            />,
          },
          "status": Object {
            "name": "Status",
            "value": <withReducer(withSaga(Connect(IncidentStatusContainer)))
              id="100"
            />,
          },
        }
      }
    />
  </div>
  <div
    className="col-12"
  >
    <div
      className="incident-detail-page__tab-container"
    >
      <withReducer(withSaga(Connect(IncidentStatusContainer)))
        id="100"
      />
    </div>
  </div>
</div>
`;

exports[`<IncidentDetailPage /> rendering should render correctly with image 1`] = `
<div
  className="incident-detail-page row container"
>
  <div
    className="col-12"
  >
    <h3>
      Melding 
      100
    </h3>
  </div>
  <ul
    className="col-12 col-md-4 incident-detail-page__map"
  />
  <div
    className="col-12 col-md-8"
  >
    (
    <Link
      replace={false}
      to="undefined/incidents"
    >
      Terug naar overzicht
    </Link>
    )
    <button
      onClick={[Function]}
    >
      Print view
    </button>
    <IncidentDetail
      incident={
        Object {
          "image": "some-image",
        }
      }
      priorityList={
        Array [
          Object {
            "key": "normal",
            "value": "Normaal",
          },
          Object {
            "key": "high",
            "value": "Hoog",
          },
        ]
      }
      stadsdeelList={
        Array [
          Object {
            "key": "A",
            "value": "Centrum",
          },
          Object {
            "key": "B",
            "value": "Westpoort",
          },
          Object {
            "key": "E",
            "value": "West",
          },
          Object {
            "key": "M",
            "value": "Oost",
          },
          Object {
            "key": "N",
            "value": "Noord",
          },
          Object {
            "key": "T",
            "value": "Zuidoost",
          },
          Object {
            "key": "K",
            "value": "Zuid",
          },
          Object {
            "key": "F",
            "value": "Nieuw-West",
          },
        ]
      }
    />
  </div>
  <div
    className="col-12"
  >
    <Tabs
      onTabChanged={[Function]}
      selectedTab="status"
      tabs={
        Object {
          "category": Object {
            "name": "Subcategorie",
            "value": <withReducer(withSaga(Connect(IncidentCategoryContainer)))
              id="100"
            />,
          },
          "history": Object {
            "name": "Historie",
            "value": <withReducer(withSaga(Connect(IncidentHistoryContainer)))
              id="100"
            />,
          },
          "image": Object {
            "name": "Foto",
            "value": <img
              alt=""
              className="incident-detail-page__image--max-width"
              src="some-image"
            />,
          },
          "notes": Object {
            "count": undefined,
            "name": "Notities",
            "value": <withReducer(withSaga(Connect(IncidentNotesContainer)))
              id="100"
            />,
          },
          "priority": Object {
            "name": "Urgentie",
            "value": <withReducer(withSaga(Connect(IncidentPriorityContainer)))
              id="100"
            />,
          },
          "status": Object {
            "name": "Status",
            "value": <withReducer(withSaga(Connect(IncidentStatusContainer)))
              id="100"
            />,
          },
        }
      }
    />
  </div>
  <div
    className="col-12"
  >
    <div
      className="incident-detail-page__tab-container"
    >
      <withReducer(withSaga(Connect(IncidentStatusContainer)))
        id="100"
      />
    </div>
  </div>
</div>
`;

exports[`<IncidentDetailPage /> rendering should render correctly with location 1`] = `
<div
  className="incident-detail-page row container"
>
  <div
    className="col-12"
  >
    <h3>
      Melding 
      100
    </h3>
  </div>
  <ul
    className="col-12 col-md-4 incident-detail-page__map"
  >
    <MapDetail
      label=""
      value={Object {}}
    />
  </ul>
  <div
    className="col-12 col-md-8"
  >
    (
    <Link
      replace={false}
      to="undefined/incidents"
    >
      Terug naar overzicht
    </Link>
    )
    <button
      onClick={[Function]}
    >
      Print view
    </button>
    <IncidentDetail
      incident={
        Object {
          "location": Object {},
        }
      }
      priorityList={
        Array [
          Object {
            "key": "normal",
            "value": "Normaal",
          },
          Object {
            "key": "high",
            "value": "Hoog",
          },
        ]
      }
      stadsdeelList={
        Array [
          Object {
            "key": "A",
            "value": "Centrum",
          },
          Object {
            "key": "B",
            "value": "Westpoort",
          },
          Object {
            "key": "E",
            "value": "West",
          },
          Object {
            "key": "M",
            "value": "Oost",
          },
          Object {
            "key": "N",
            "value": "Noord",
          },
          Object {
            "key": "T",
            "value": "Zuidoost",
          },
          Object {
            "key": "K",
            "value": "Zuid",
          },
          Object {
            "key": "F",
            "value": "Nieuw-West",
          },
        ]
      }
    />
  </div>
  <div
    className="col-12"
  >
    <Tabs
      onTabChanged={[Function]}
      selectedTab="status"
      tabs={
        Object {
          "category": Object {
            "name": "Subcategorie",
            "value": <withReducer(withSaga(Connect(IncidentCategoryContainer)))
              id="100"
            />,
          },
          "history": Object {
            "name": "Historie",
            "value": <withReducer(withSaga(Connect(IncidentHistoryContainer)))
              id="100"
            />,
          },
          "image": undefined,
          "notes": Object {
            "count": undefined,
            "name": "Notities",
            "value": <withReducer(withSaga(Connect(IncidentNotesContainer)))
              id="100"
            />,
          },
          "priority": Object {
            "name": "Urgentie",
            "value": <withReducer(withSaga(Connect(IncidentPriorityContainer)))
              id="100"
            />,
          },
          "status": Object {
            "name": "Status",
            "value": <withReducer(withSaga(Connect(IncidentStatusContainer)))
              id="100"
            />,
          },
        }
      }
    />
  </div>
  <div
    className="col-12"
  >
    <div
      className="incident-detail-page__tab-container"
    >
      <withReducer(withSaga(Connect(IncidentStatusContainer)))
        id="100"
      />
    </div>
  </div>
</div>
`;

exports[`<IncidentDetailPage /> rendering should render correctly without incident 1`] = `
<div
  className="incident-detail-page row container"
>
  <div
    className="col-12"
  >
    <h3>
      Melding 
      100
    </h3>
  </div>
  <ul
    className="col-12 col-md-4 incident-detail-page__map"
  />
  <div
    className="col-12 col-md-8"
  >
    (
    <Link
      replace={false}
      to="undefined/incidents"
    >
      Terug naar overzicht
    </Link>
    )
    <button
      onClick={[Function]}
    >
      Print view
    </button>
  </div>
  <div
    className="col-12"
  >
    <Tabs
      onTabChanged={[Function]}
      selectedTab="status"
      tabs={
        Object {
          "category": Object {
            "name": "Subcategorie",
            "value": <withReducer(withSaga(Connect(IncidentCategoryContainer)))
              id="100"
            />,
          },
          "history": Object {
            "name": "Historie",
            "value": <withReducer(withSaga(Connect(IncidentHistoryContainer)))
              id="100"
            />,
          },
          "image": undefined,
          "notes": Object {
            "count": undefined,
            "name": "Notities",
            "value": <withReducer(withSaga(Connect(IncidentNotesContainer)))
              id="100"
            />,
          },
          "priority": Object {
            "name": "Urgentie",
            "value": <withReducer(withSaga(Connect(IncidentPriorityContainer)))
              id="100"
            />,
          },
          "status": Object {
            "name": "Status",
            "value": <withReducer(withSaga(Connect(IncidentStatusContainer)))
              id="100"
            />,
          },
        }
      }
    />
  </div>
  <div
    className="col-12"
  >
    <div
      className="incident-detail-page__tab-container"
    >
      <withReducer(withSaga(Connect(IncidentStatusContainer)))
        id="100"
      />
    </div>
  </div>
</div>
`;
